// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle> renders toggle 1`] = `
<span
  className="Toggle__Toggle-h8sldt-0 jKEBzD"
  onClick={[Function]}
/>
`;

exports[`<Toggle> renders toggle 2`] = `
<span
  checked={true}
  className="Toggle__Toggle-h8sldt-0 gZIbjx"
  onClick={[Function]}
/>
`;

exports[`<Toggle> renders toggle 3`] = `
<span
  checked={true}
  className="Toggle__Toggle-h8sldt-0 bYSeek"
  disabled={true}
  onClick={[Function]}
/>
`;
